# pbr-model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
inc/: App.hpp  Camera.hpp  Framebuffer.hpp  Model.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  World.hpp  debug.hpp  util.hpp
shaders/: final.vert  model.frag  model.vert  nofx.frag  simple.frag  simple.vert  skybox.frag  skybox.vert  tri.frag  tri.vert
src/: App.cpp  Camera.cpp  Framebuffer.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  main.cpp
